<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/trang_ch" />
        <item
            android:id="@+id/nav_mapb"
            android:icon="@drawable/baseline_fastfood_24"
            android:title="@string/c_c_b_a_n_trong_ng_y" />
        <item
            android:id="@+id/nav_yeuthich"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/y_u_th_ch" />
        <item
            android:id="@+id/nav_giohang"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/gi_h_ng" />
    </group>
</menu>