<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myfastfood.ui.home.HomeFragment"
        android:label="@string/trang_ch"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mapb"
        android:name="com.example.myfastfood.ui.dailymeal.MonanPBFragment"
        android:label="@string/m_n_n_ph_bi_n"
        tools:layout="@layout/mon_anpb_fragment" />

    <fragment
        android:id="@+id/nav_yeuthich"
        android:name="com.example.myfastfood.ui.favourite.YeuthichFragment"
        android:label="@string/y_u_thich"
        tools:layout="@layout/fragment_yeuthich" />
    <fragment
        android:id="@+id/nav_giohang"
        android:name="com.example.myfastfood.ui.RohangFragment"
        android:label="@string/gi_h_ng"
        tools:layout="@layout/fragment_giohang" />
</navigation>